--- a/data/sources/fsharping.yaml
+++ b/data/sources/fsharping.yaml
@@ -27,14 +27,8 @@ series:
         status: CONFIRMED
         uid: event_279609755@meetup.com
         url: https://www.meetup.com/FSharping/events/279609755/
-        dtstart:
-          timezone: Europe/Prague
-          datetime: 20210804T180000
-          datetime_utc: 20210804T160000Z
-        dtend:
-          timezone: Europe/Prague
-          datetime: 20210804T210000
-          datetime_utc: 20210804T190000Z
+        dtstart: 2021-08-04 18:00:00+02:00
+        dtend: 2021-08-04 21:00:00+02:00
   - meetupcom:
       meta_description: 'Wed, Aug 19, 2020, 6:00 PM: Like every summer, we will have a beer session somewhere in Prague to chat about F#, community, conferences, projects and other great things (not only) from IT world and fu'
       og_title: FSharping |> Beer
@@ -57,14 +51,8 @@ series:
         status: CONFIRMED
         uid: event_271789552@meetup.com
         url: https://www.meetup.com/FSharping/events/271789552/
-        dtstart:
-          timezone: Europe/Prague
-          datetime: 20200819T180000
-          datetime_utc: 20200819T160000Z
-        dtend:
-          timezone: Europe/Prague
-          datetime: 20200819T230000
-          datetime_utc: 20200819T210000Z
+        dtstart: 2020-08-19 18:00:00+02:00
+        dtend: 2020-08-19 23:00:00+02:00
   - meetupcom:
       meta_description: 'Fri, Jun 5, 2020, 11:00 AM: 5. června nás čeká již třetí ročník virtuální konference fsharpConf, organizované lidmi z @fsharponline. Můžete se těšit na F# experty z celého světa. Uvidíte praktické vyu'
       og_title: fsharpConf 2020
@@ -88,14 +76,8 @@ series:
         status: CONFIRMED
         uid: event_270899664@meetup.com
         url: https://www.meetup.com/FSharping/events/270899664/
-        dtstart:
-          timezone: Europe/Prague
-          datetime: 20200605T110000
-          datetime_utc: 20200605T090000Z
-        dtend:
-          timezone: Europe/Prague
-          datetime: 20200605T220000
-          datetime_utc: 20200605T200000Z
+        dtstart: 2020-06-05 11:00:00+02:00
+        dtend: 2020-06-05 22:00:00+02:00
   - meetupcom:
       meta_description: 'Tue, Feb 25, 2020, 6:00 PM: We would like to invite you to our very first FShaping Functional Programming workshop.==== Basic information ====Workshop is planned for 3 hours.We will start at 18:00! (W'
       og_title: 'Josef Starýchfojtů: Advanced FP in F# (Workshop)'
@@ -119,11 +101,5 @@ series:
         status: CONFIRMED
         uid: event_268054108@meetup.com
         url: https://www.meetup.com/FSharping/events/268054108/
-        dtstart:
-          timezone: Europe/Prague
-          datetime: 20200225T180000
-          datetime_utc: 20200225T170000Z
-        dtend:
-          timezone: Europe/Prague
-          datetime: 20200225T210000
-          datetime_utc: 20200225T200000Z
+        dtstart: 2020-02-25 18:00:00+01:00
+        dtend: 2020-02-25 21:00:00+01:00
