--- a/data/sources/mlmu-brno.yaml
+++ b/data/sources/mlmu-brno.yaml
@@ -27,14 +27,8 @@ series:
         status: CONFIRMED
         uid: event_279295286@meetup.com
         url: https://www.meetup.com/Machine-Learning-Meetup-Brno/events/279295286/
-        dtstart:
-          timezone: Europe/Prague
-          datetime: 20210721T180000
-          datetime_utc: 20210721T160000Z
-        dtend:
-          timezone: Europe/Prague
-          datetime: 20210721T210000
-          datetime_utc: 20210721T190000Z
+        dtstart: 2021-07-21 18:00:00+02:00
+        dtend: 2021-07-21 21:00:00+02:00
   - meetupcom:
       meta_description: 'Thu, Jun 24, 2021, 7:00 PM: The artistic use of AI challenges some of the cornerstones of the modern Western concepts of art and creativity. The artist who works with AI blurs the lines that tradition'
       og_title: 'D<AI>DALOS – Post-Human Creativity: The Use of AI in Art'
@@ -58,14 +52,8 @@ series:
         status: CONFIRMED
         uid: event_278824055@meetup.com
         url: https://www.meetup.com/Machine-Learning-Meetup-Brno/events/278824055/
-        dtstart:
-          timezone: Europe/Prague
-          datetime: 20210624T190000
-          datetime_utc: 20210624T170000Z
-        dtend:
-          timezone: Europe/Prague
-          datetime: 20210624T210000
-          datetime_utc: 20210624T190000Z
+        dtstart: 2021-06-24 19:00:00+02:00
+        dtend: 2021-06-24 21:00:00+02:00
   - meetupcom:
       meta_description: 'Mon, Jun 7, 2021, 7:30 PM: We invite you to the lecture From Automation to Intelligence: The Long History of AI by Nathan Ensmenger from the Indiana University. This is the opening lecture of a discus'
       og_title: 'D<AI>DALOS – From Automation to Intelligence: The Long History of AI'
@@ -89,14 +77,8 @@ series:
         status: CONFIRMED
         uid: event_278523645@meetup.com
         url: https://www.meetup.com/Machine-Learning-Meetup-Brno/events/278523645/
-        dtstart:
-          timezone: Europe/Prague
-          datetime: 20210607T193000
-          datetime_utc: 20210607T173000Z
-        dtend:
-          timezone: Europe/Prague
-          datetime: 20210607T213000
-          datetime_utc: 20210607T193000Z
+        dtstart: 2021-06-07 19:30:00+02:00
+        dtend: 2021-06-07 21:30:00+02:00
   - meetupcom:
       meta_description: 'Wed, May 26, 2021, 6:00 PM: The talks will be live on YouTube.Multiple speakers will shows us how they different technologies to successfully implement MLOps with variety of organizations and they wil'
       og_title: 'MLMU Online #15: Key factors of successful MLOps'
@@ -120,11 +102,5 @@ series:
         status: CONFIRMED
         uid: event_278273823@meetup.com
         url: https://www.meetup.com/Machine-Learning-Meetup-Brno/events/278273823/
-        dtstart:
-          timezone: Europe/Prague
-          datetime: 20210526T180000
-          datetime_utc: 20210526T160000Z
-        dtend:
-          timezone: Europe/Prague
-          datetime: 20210526T200000
-          datetime_utc: 20210526T180000Z
+        dtstart: 2021-05-26 18:00:00+02:00
+        dtend: 2021-05-26 20:00:00+02:00
