--- a/data/sources/pipedrive-prague.yaml
+++ b/data/sources/pipedrive-prague.yaml
@@ -27,14 +27,8 @@ series:
         status: CONFIRMED
         uid: event_280460361@meetup.com
         url: https://www.meetup.com/pipedrive-talks-prague/events/280460361/
-        dtstart:
-          timezone: Europe/Prague
-          datetime: 20210908T170000
-          datetime_utc: 20210908T150000Z
-        dtend:
-          timezone: Europe/Prague
-          datetime: 20210908T190000
-          datetime_utc: 20210908T170000Z
+        dtstart: 2021-09-08 17:00:00+02:00
+        dtend: 2021-09-08 19:00:00+02:00
   - meetupcom:
       meta_description: 'Tue, Sep 14, 2021, 6:00 PM: GraphQL is already far on the adoption curve. It is slowly becoming mainstream, and we start seeing new products being built primarily on GraphQL instead of REST. Most comp'
       og_title: 'Backend Meetup: GraphQL at Scale'
@@ -58,14 +52,8 @@ series:
         status: CONFIRMED
         uid: event_280151778@meetup.com
         url: https://www.meetup.com/pipedrive-talks-prague/events/280151778/
-        dtstart:
-          timezone: Europe/Prague
-          datetime: 20210914T180000
-          datetime_utc: 20210914T160000Z
-        dtend:
-          timezone: Europe/Prague
-          datetime: 20210914T230000
-          datetime_utc: 20210914T210000Z
+        dtstart: 2021-09-14 18:00:00+02:00
+        dtend: 2021-09-14 23:00:00+02:00
   - meetupcom:
       meta_description: 'Thu, May 20, 2021, 5:00 PM: Welcome to Pipedrive’s first online product meetup!Pipedrive’s VP of Product, Krishna Panicker and his team launched a product called LeadBooster, which has generated more '
       og_title: What did Pipedrive learn from its most successful product launch?
@@ -89,11 +77,5 @@ series:
         status: CONFIRMED
         uid: event_278117749@meetup.com
         url: https://www.meetup.com/pipedrive-talks-prague/events/278117749/
-        dtstart:
-          timezone: Europe/Prague
-          datetime: 20210520T170000
-          datetime_utc: 20210520T150000Z
-        dtend:
-          timezone: Europe/Prague
-          datetime: 20210520T180000
-          datetime_utc: 20210520T160000Z
+        dtstart: 2021-05-20 17:00:00+02:00
+        dtend: 2021-05-20 18:00:00+02:00
