--- a/data/sources/topmonks-caffe.yaml
+++ b/data/sources/topmonks-caffe.yaml
@@ -28,14 +28,8 @@ series:
         status: CONFIRMED
         uid: event_279829674@meetup.com
         url: https://www.meetup.com/TopMonks-Caffe/events/279829674/
-        dtstart:
-          timezone: Europe/Prague
-          datetime: 20210803T190000
-          datetime_utc: 20210803T170000Z
-        dtend:
-          timezone: Europe/Prague
-          datetime: 20210803T210000
-          datetime_utc: 20210803T190000Z
+        dtstart: 2021-08-03 19:00:00+02:00
+        dtend: 2021-08-03 21:00:00+02:00
   - meetupcom:
       meta_description: 'Tue, Jul 13, 2021, 7:00 PM: Jirka Jansa a Jirka Pénzeš prozradí své osobní zkušenosti z údržby a vývoje legacy systému. Zároveň se podíváme i na best practices a různé cesty, které se dají při vývoji '
       og_title: Legacy | refactoring 2021
@@ -58,14 +52,8 @@ series:
         status: CONFIRMED
         uid: event_279359705@meetup.com
         url: https://www.meetup.com/TopMonks-Caffe/events/279359705/
-        dtstart:
-          timezone: Europe/Prague
-          datetime: 20210713T190000
-          datetime_utc: 20210713T170000Z
-        dtend:
-          timezone: Europe/Prague
-          datetime: 20210713T210000
-          datetime_utc: 20210713T190000Z
+        dtstart: 2021-07-13 19:00:00+02:00
+        dtend: 2021-07-13 21:00:00+02:00
   - meetupcom:
       meta_description: 'Tue, Jun 1, 2021, 7:00 PM: Zkoušeli jste někdy párové programování nebo mob programming? Nejsou to nové techniky, ale v praxi stále málo použivané.Marian Schubert a Jirka Jansa nám prozradí své zkušen'
       og_title: Mob programming a párování
@@ -89,14 +77,8 @@ series:
         status: CONFIRMED
         uid: event_278418529@meetup.com
         url: https://www.meetup.com/TopMonks-Caffe/events/278418529/
-        dtstart:
-          timezone: Europe/Prague
-          datetime: 20210601T190000
-          datetime_utc: 20210601T170000Z
-        dtend:
-          timezone: Europe/Prague
-          datetime: 20210601T210000
-          datetime_utc: 20210601T190000Z
+        dtstart: 2021-06-01 19:00:00+02:00
+        dtend: 2021-06-01 21:00:00+02:00
   - meetupcom:
       meta_description: 'Tue, May 4, 2021, 7:00 PM: Od bankovních systémů po první elektronickou vodní dýmkuČeká nás jubilejní TopMonks Caffè! Slavíme deset let své existence a proto toto caffè budeme věnovat právě naší cestě'
       og_title: 10 let TopMonks
@@ -120,11 +102,5 @@ series:
         status: CONFIRMED
         uid: event_277826737@meetup.com
         url: https://www.meetup.com/TopMonks-Caffe/events/277826737/
-        dtstart:
-          timezone: Europe/Prague
-          datetime: 20210504T190000
-          datetime_utc: 20210504T170000Z
-        dtend:
-          timezone: Europe/Prague
-          datetime: 20210504T210000
-          datetime_utc: 20210504T190000Z
+        dtstart: 2021-05-04 19:00:00+02:00
+        dtend: 2021-05-04 21:00:00+02:00
